## Process this file with automake to produce Makefile.in

bin_PROGRAMS = coyotetm

coyotetm_SOURCES = Date.h Date.cxx \
   Observer.h \
   Subject.h Subject.cxx \
   ImageDB.h ImageDB.cxx \
   Database.h Database.cxx \
   KeyDAO.h KeyDAO.cxx \
   PersonDAO.h PersonDAO.cxx \
   ProjectDAO.h ProjectDAO.cxx \
   TaskDAO.h TaskDAO.cxx \
   OccurrenceDAO.h OccurrenceDAO.cxx \
   Person.h Person.cxx \
   Project.h Project.cxx \
   Task.h Task.cxx \
   Occurrence.h Occurrence.cxx \
   UI.h UI.cxx \
   ListView.h ListView.cxx \
   PersonListView.h PersonListView.cxx \
   ProjectListView.h ProjectListView.cxx \
   TaskListView.h TaskListView.cxx \
   OccurrenceListView.h OccurrenceListView.cxx \
   PriorityChoiceView.h PriorityChoiceView.cxx \
   StatusChoiceView.h StatusChoiceView.cxx \
   PersonChoiceView.h PersonChoiceView.cxx \
   ProjectChoiceView.h ProjectChoiceView.cxx \
   TaskChoiceView.h TaskChoiceView.cxx \
   ProjectEditUI.h ProjectEditUI.cxx \
   PersonEditUI.h PersonEditUI.cxx \
   TaskEditUI.h TaskEditUI.cxx \
   OccurrenceEditUI.h OccurrenceEditUI.cxx \
   PersonUI.h PersonUI.cxx \
   ProjectUI.h ProjectUI.cxx \
   TaskUI.h TaskUI.cxx \
   OccurrenceUI.h OccurrenceUI.cxx \
   coyotetm.cxx

# The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = coyotetm.desktop

#the application icon
appicondir = $(datadir)/icons/hicolor/48x48/apps
appicon_DATA = coyotetm.png

