appdata = 'io.github.CoyoteTM.appdata.xml'

install_data(
  join_paths('appdata', appdata),
  install_dir: join_paths(coyotetm_datadir, 'metainfo')
)

desktop = 'io.github.CoyoteTM.desktop'

install_data(
  desktop,
  install_dir: join_paths(coyotetm_datadir, 'applications')
)

icon = 'io.github.CoyoteTM.png'

install_data(
  join_paths('icons', 'hicolor', '48x48', 'apps', icon),
  install_dir: join_paths(coyotetm_datadir, 'icons', 'hicolor', '48x48', 'apps')
)

