appdata = 'io.github.igaldino.CoyoteTM.appdata.xml'

install_data(
  join_paths('appdata', appdata),
  install_dir: join_paths(coyotetm_datadir, 'metainfo')
)

desktop = 'io.github.igaldino.CoyoteTM.desktop'

install_data(
  desktop,
  install_dir: join_paths(coyotetm_datadir, 'applications')
)

icon = 'io.github.igaldino.CoyoteTM.png'

install_data(
  join_paths('icons', 'hicolor', '48x48', 'apps', icon),
  install_dir: join_paths(coyotetm_datadir, 'icons', 'hicolor', '48x48', 'apps')
)

