appdata = 'io.github.igaldino.CoyoteTM.appdata.xml'

install_data(
  join_paths('appdata', appdata),
  install_dir: join_paths(coyotetm_datadir, 'metainfo')
)

desktop = 'io.github.igaldino.CoyoteTM.desktop'

install_data(
  desktop,
  install_dir: join_paths(coyotetm_datadir, 'applications')
)

icon = 'io.github.igaldino.CoyoteTM.svg'

install_data(
  join_paths('icons', icon),
  install_dir: join_paths(coyotetm_datadir, 'icons', 'hicolor', 'scalable', 'apps')
)

symbolic_icon = 'io.github.igaldino.CoyoteTM-symbolic.svg'

install_data(
  join_paths('icons', symbolic_icon),
  install_dir: join_paths(coyotetm_datadir, 'icons', 'hicolor', 'symbolic', 'apps')
)

